# openhound-okta

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  extension.yaml  justfile  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  SECURITY.md
.github/workflows/: publish.yml  release-on-merge.yml  validate-branch.yml
descriptions/edges/: Okta_AddMember.md  Okta_AgentMemberOf.md  Okta_AgentPoolFor.md  Okta_ApiTokenFor.md  Okta_AppAdmin.md  Okta_AppAssignment.md  Okta_Contains.md  Okta_CreatorOf.md  Okta_DeviceOf.md  Okta_GroupAdmin.md  Okta_GroupMembershipAdmin.md  Okta_GroupPull.md  Okta_GroupPush.md  Okta_HasRole.md  Okta_HasRoleAssignment.md  Okta_HelpDeskAdmin.md  Okta_HostsAgent.md  Okta_IdentityProviderFor.md  Okta_IdpGroupAssignment.md  Okta_InboundSSO.md  Okta_KerberosSSO.md  Okta_KeyOf.md  Okta_ManageApp.md  Okta_ManagerOf.md  Okta_MemberOf.md  Okta_MembershipSync.md  Okta_MobileAdmin.md  Okta_OrgAdmin.md  Okta_OrgSWA.md  Okta_OutboundOrgSSO.md  Okta_OutboundSSO.md  Okta_PasswordSync.md  Okta_PolicyMapping.md  Okta_ReadClientSecret.md  Okta_ReadPasswordUpdates.md  Okta_RealmContains.md  Okta_ResetFactors.md  Okta_ResetPassword.md  Okta_ResourceSetContains.md  Okta_SWA.md  (+6 more)
descriptions/nodes/: Okta_Agent.md  Okta_AgentPool.md  Okta_ApiServiceIntegration.md  Okta_ApiToken.md  Okta_Application.md  Okta_AuthorizationServer.md  Okta_ClientSecret.md  Okta_CustomRole.md  Okta_Device.md  Okta_Group.md  Okta_IdentityProvider.md  Okta_JWK.md  Okta_Organization.md  (+6 more)
docs/: og-docs.json
extension/: schema.json
src/: main.py
(+179 files in other folders)
