[project]
name = "openhound-okta"
dynamic = ["version"]
description = "OpenGraph collector for okta using OpenHound"
readme = "README.md"
requires-python = ">=3.13, <3.15"

authors = [
    { name = "jdreijer", email = "jdreijer@specterops.io" },
    { name = "Michael Grafnetter", email = "mgrafnetter@specterops.io" },
]
dependencies = [
    "cryptography>=46.0.5",
    "joserfc>=1.6.3",
]

[build-system]
requires = ['hatchling', 'hatch-vcs']
build-backend = 'hatchling.build'

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel.force-include]
"extension.yaml" = "openhound_okta/extension.yaml"

[dependency-groups]
dev = [
    "openhound",
    "pre-commit>=4.5.1",
    "pytest>=9.0.1",
    "ruff>=0.15.5",
    "mypy>=1.19.1",
    "zensical>=0.0.27",
]

[project.entry-points."openhound.sources"]
okta = "openhound_okta.main:app"
